2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/Esound/EsoundPreference.m include NSDictionary.h
	* CynthiuneController.m do not include nonexisting header
	* CynthiuneAnimatedImageView.m, CynthiunePauseButton.m,
	  CynthiuneSongTitleCell.m add [super dealloc]
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Frameworks/Cynthiune/GNUmakefile.preamble diable mcheck
	* Frameworks/Cynthiune/NSCellExtensions.m include NSFoundation.h
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* SongInspectorController.m disable LibMusicBrainz for now
	* GNUmakefile, GNUmakefile.preamble disable mcheck, and 
	  libmusicbrainz, and add Sndio bundle if statement
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* PlaylistController.m fix opening open Panel
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GeneralPreference.m make Sndio backend the default on OpenBSD
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/FLAC/FLAC.* update to newer FLAC API
	* Bundles/FLAC/FLACTags.m update to newer FLAC API
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* BundleManager.m make it find Cynthiunes bundles, and simplify
	  some while loops
	* Bundles/*/GNUmakefile install bundles in right location
	* Bundles/*/GNUmakefile.preamble do not link against mcheck when
	  debug flag is set
2012-03-25  Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Initial Import to GAP CVS
2006-03-31  Wolfgang Sourdeau  <Wolfgang@Contre.COM>

	* GNUmakefile: release 0.9.5.

	* Player.m ([Player -readNextChunk:bufferwithSize:bufferSize]):
	return 0 if the code returned was 0 or less.

2006-03-28  Wolfgang Sourdeau  <Wolfgang@Contre.COM>

	* PlaylistView.m ([PlaylistView -_selectionTopByExtendingIt:keep]) 
	([PlaylistView -_selectionBottomByExtendingIt:keep]): take
	selectionDir into account.

	* PlaylistController.m ([PlaylistController -updateStatusLabel]):
	made public.